--- a/04_DOM Project/04_DOM Project/index.html
+++ b/04_DOM Project/04_DOM Project/index.html
@@ -184,6 +184,12 @@
         <!-- end wrapper -->
     </div>
     <!-- end container -->
+
+
+    <script src="./script.js"></script>
+
+
+
 </body>
 
 </html>
